# delphi-edm4hep

./: .clang-format  .envrc  .gitignore  CMakeLists.txt  DELPHI_EDM4hepVersion.hpp.in  Doxyfile.in  PDLINPUT  README.md  build_with_datamodel.sh  output.edm4hep.root
cmake/: Doxygen.cmake  FindDELPHI.cmake  GitVersion.cmake
config/: delphi-edm4hep.yaml  delphi_edm4hep.toml
datamodel/: CMakeLists.txt  README.md  delphi_edm4hep.yaml  delphi_edm4hepConfig.cmake.in  edm4delphi.yaml  podio_generated_files.cmake
datamodel/delphi_edm4hep/: DatamodelDefinition.h  EventHeader.h  EventHeaderCollection.h  EventHeaderCollectionData.h  EventHeaderData.h  EventHeaderObj.h  MutableEventHeader.h  MutableRunHeader.h  RunHeader.h  RunHeaderCollection.h  RunHeaderCollectionData.h  RunHeaderData.h  RunHeaderObj.h  TimeStamp.h  Vector3f.h
datamodel/src/: EventHeader.cc  EventHeaderCollection.cc  EventHeaderCollectionData.cc  EventHeaderObj.cc  MutableEventHeader.cc  MutableRunHeader.cc  RunHeader.cc  RunHeaderCollection.cc  RunHeaderCollectionData.cc  RunHeaderObj.cc  TimeStamp.cc  Vector3f.cc  selection.xml
docs/: documentation.md  main_program.md  vscode_documentation.md
include/: EDM4HepWriter.hpp  EDM4HepWriter.hxx  EDM4hepWriter.hpp  delphi-edm4hep_version.hpp.in  edm4hep_writer.hpp  phdst.hpp  phdst.hxx  skelana.hpp
include/dstana/: dstana.hpp
include/mamoth/: mamoth.hpp
include/phdst/: Analysis.hpp  analysis.hpp  functions.hpp  functions.hxx  phciii.hpp  phdst.hpp  phgen.hpp  phlun.hpp  pxchdr.hpp  uxcom.hpp  uxlink.hpp  zebra_pointer.hpp
include/skelana/: functions.hpp  mtrack.hpp  pscbsp.hpp  pscbtg.hpp  pscdex.hpp  psceld.hpp  pscevt.hpp  pscflg.hpp  pscgrc.hpp  pschad.hpp  pschdc.hpp  pschdn.hpp  pschdr.hpp  psclrc.hpp  pscluj.hpp  pscmud.hpp  pscrnq.hpp  psctbl.hpp  psctra.hpp  pscutt.hpp  pscvec.hpp  pscvtx.hpp  pxcons.hpp
scripts/: run.sh  run_edm4hep_qqps94.sh  run_mc.sh  run_phdst_qqps94.sh  run_qqps94.sh  run_short94.sh  serve_docs.sh
src/: CMakeLists.txt  EDM4HepWriter.cpp  EDM4HepWriter.cxx  EDM4hepWriter.cpp  edm4hep_writer.cpp  main.cpp  main.cxx  main_edm4hep.cpp  main_edm4hep_writer.cpp  main_phdst.cpp  skelana.cra  skelana_functions.cpp
src/phdst/: Analysis.cpp  analysis.cpp  zebra_pointer.cpp  zebra_pointer.f
